tests/base/valid/BoolList_Valid_1.whiley
void System::main([string] args):
    ls = [true,false,true]
    this.out.println(str(ls))
    x = ls[0]
    this.out.println(str(x))
    ls[0] = false
    this.out.println(str(ls))
