tests/base/invalid/String_Invalid_1.whiley
void System::main([string] args):
    s = "Hello World"
    s[0] = 1.234
    out.println(s)
